[package]
name = "traffic-monitor"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
csv = "1.3"
etherparse = "0.20.2"
ipnet = "2.11"
pcap = "2.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
